[gd_scene load_steps=9 format=3 uid="uid://rnl0nqct56jw"]

[ext_resource type="Script" path="res://Machine.gd" id="1_cnjhw"]
[ext_resource type="Texture2D" uid="uid://bt2bne1eew7t2" path="res://assets_temporaires/Traps/Fire/On (16x32).png" id="2_i1b3t"]
[ext_resource type="Texture2D" uid="uid://dww85f70bkko2" path="res://vrais assets/pot uncooked-1.png.png" id="2_lb4yq"]
[ext_resource type="Texture2D" uid="uid://cclmwcqwue4" path="res://vrais assets/cutting table unused-1.png.png" id="3_0mxg4"]
[ext_resource type="Texture2D" uid="uid://xdrncb46t7ev" path="res://vrais assets/empty pan-1.png.png" id="5_yr88j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_betbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lb4yq")
}],
"loop": true,
"name": &"boil",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0mxg4")
}],
"loop": true,
"name": &"chop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i1b3t")
}],
"loop": true,
"name": &"machine",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_yr88j")
}],
"loop": true,
"name": &"wok",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8n7r"]
size = Vector2(29.3313, 33.7379)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty2j2"]
size = Vector2(106, 74.0946)

[node name="Machine" type="RigidBody2D"]
position = Vector2(58, 42)
collision_layer = 8
collision_mask = 10
script = ExtResource("1_cnjhw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-9, -9)
scale = Vector2(0.851562, 0.74375)
sprite_frames = SubResource("SpriteFrames_betbo")
animation = &"chop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2(-9.5, -7.5)
scale = Vector2(1.87513, 1.56588)
shape = SubResource("RectangleShape2D_l8n7r")

[node name="UseArea" type="Area2D" parent="."]
texture_filter = 1
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseArea"]
position = Vector2(-8.92084, -11.9528)
rotation = -0.00263442
shape = SubResource("RectangleShape2D_ty2j2")

[node name="Timer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
offset_left = -11.0
offset_top = -56.0
offset_right = 29.0
offset_bottom = -33.0
rotation = -0.00049245

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
